# gcc-plugin-cpp-template

./: #Readme.md#  .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile.orig  NEWS  Readme.md  RecordContext.cpp  RecordContext.hpp  __callback.cpp  boostrap.sh  bootstrap-fto.sh  bootstrap-ftp.sh  bootstrap.sh  callback.cpp  callback.hpp  callbacks.cpp  callbacks.hpp  config.h.in  configure  configure.ac  configure.scan  dump_memory.cpp  enumeral_type.hpp  error_mark.cpp  error_mark.hpp  field.cpp  field.hpp  field_decl.cpp  field_decl.hpp  identifer_node.cpp  identifer_node.hpp  introspection.cpp  introspection.hpp  label_decl.cpp  label_decl.hpp  librdfinterface.cpp  librdfinterface.hpp  (+25 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
examples/: Makefile.am  configure.ac  test_string_const.cpp
fake/: tree.cpp  tree.h
owl/: Makefile  dc.cpp  dc.hpp  gcc.cpp  gcc.hpp  librdfinterface.cpp  librdfinterface.hpp  main.cpp  owl.cpp  owl.hpp  prop_cppstd.cpp  prop_cppstd.hpp  prop_wikipedia.hpp  property.hpp  rdf.cpp  rdf.hpp  rdfs.cpp  rdfs.hpp  statement.cpp  statement.hpp  struct.cpp  struct.hpp  url.cpp  url.hpp  xml.hpp  xsd.hpp
patterns/: Makefile.test  Readme.md  all-tree.def  iso_tree_node.hpp  pointers.cpp  pointers_objects.cpp  process.cpp  read.cpp  single_objects.cpp  single_objects_oo.cpp  tree.hpp  tree_nodes.cpp
testcase/: Makefile  test.cpp  test.hpp
tests/: Makefile  crash1.cpp  defines.h  plugincpp_interface.cpp  plugincpp_interface_simple.cpp  plugincpp_test.cpp  plugincpp_test_template.cpp  test.c  test1.cpp  test_array.cpp  test_cpp_out.cpp  test_cpp_out_v2.cpp  test_enum.cpp.001t.tu  test_link.cpp  test_memory.cpp  test_pass.c  test_simple_int.cpp  test_struct.cpp  testout.cpp
tree-nodes/: Makefile  abs_expr.cpp  abs_expr.hpp  addr_expr.cpp  addr_expr.hpp  addr_space_convert_expr.cpp  addr_space_convert_expr.hpp  aggr_init_expr.cpp  aggr_init_expr.hpp  alignof_expr.cpp  alignof_expr.hpp  annotate_expr.cpp  annotate_expr.hpp  argument_pack_select.cpp  argument_pack_select.hpp  array_notation_ref.cpp  array_notation_ref.hpp  array_range_ref.cpp  array_range_ref.hpp  array_ref.cpp  array_ref.hpp  array_type.cpp  array_type.hpp  arrow_expr.cpp  arrow_expr.hpp  asm_expr.cpp  asm_expr.hpp  assert_expr.cpp  assert_expr.hpp  at_encode_expr.cpp  at_encode_expr.hpp  attr_addr_expr.cpp  attr_addr_expr.hpp  baselink.cpp  baselink.hpp  bases.cpp  bases.hpp  bind_expr.cpp  bind_expr.hpp  bit_and_expr.cpp  (+628 more)
